--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "5.4.0"
+    "react-icons": "5.4.0",
+    "resend": "^6.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
