--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.4",
+    "i18next": "^25.7.2",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-i18next": "^16.4.1",
     "react-icons": "5.4.0"
   },
   "devDependencies": {
