--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "i18next": "^25.7.2",
+    "leaflet": "^1.9.4",
     "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-i18next": "^16.4.1",
     "react-icons": "5.4.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "resend": "^6.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
